cambios en imgs banner y cards, redaccion de mision y vision

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>diseño1</title>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
@@ -81,23 +81,23 @@
     </main>
 
     <section>
-        <div class="container-fluid mx-3 mt-3">
+        <div class="container-fluid mx-1 mt-3 ">
             <div class="row">
                 <h2> Nuestras Áreas de acción</h2>
             </div>
-            <div class="row">    
+            <div class="row justify-content-md-center pl-1">    
                 <div class="col-md-4 mb-4">
                     <figure class="snip1527">
-                    <div class="image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample23.jpg" alt="pr-sample23" /></div>
+                    <div class="image"><img src="./assets/img/card1.jpg" alt="pr-sample23" /></div>
                     <figcaption>
                         <div class="icon">
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
                         </div>
                         <h3>Seguiridad</h3>
                         <p> En nuestra área de Seguridad contamos con soluciones en: <br>
-                        - Sistemas de instrucción <br>
-                        - Sistemas contra incendios <br>
-                        - Sistemas de grabación
+                        - Sistemas de intrusión. <br>
+                        - Sistemas contra incendios. <br>
+                        - Sistemas cerrado de televisión.
                         </p>
                     </figcaption>
                     <a href="#"></a>
@@ -105,14 +105,14 @@
                 </div>  
                 <div class="col-md-4 mb-4">
                     <figure class="snip1527">
-                    <div class="image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample24.jpg" alt="pr-sample24" /></div>
+                    <div class="image"><img src="./assets/img/card2.jpg" alt="pr-sample24" /></div>
                     <figcaption>
                         <div class="icon">
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
                         </div>
                         <h3>Control</h3>
                         <p> En nuestra área de Control contamos con soluciones en: <br>
-                        - Control de accesp
+                        - Control de acceso.
                         - Sistemas de control de Bioseguridad
                         </p>
                     </figcaption>
@@ -121,7 +121,7 @@
                 </div> 
                 <div class="col-md-4 mb-4">
                     <figure class="snip1527">
-                    <div class="image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample24.jpg" alt="pr-sample25" /></div>
+                    <div class="image"><img src="./assets/img/card3.jpg" alt="pr-sample25" /></div>
                     <figcaption>
                         <div class="icon">
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
@@ -129,7 +129,7 @@
                         <h3>Innovación</h3>
                         <p> En nuestra área de Innovación contamos con soluciones en: <br>
                         - Integracion de sistemas Iot
-                        - Sistemas de control de nergías renovables
+                        - Sistemas de control de energías renovables
                         </p>
                     </figcaption>
                     <a href="#"></a>
@@ -158,7 +158,7 @@
                 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExperiencia">
                     <div class="card-body">
-                        <strong>nuestra misión es misionar </strong>                
+                        <strong>La misión de IDDE integrar la seguridad con el control de esa manera innovar y borrar esa mala percepción que se ha creado frente a la idea de los sistemas autónomos. impulsar la tecnología de las  IoT de esa manera educar y generar empatía con los usuarios y no olvidar nuestra razón de existir que es crear seguridad accesible para generar confianza.</strong>                
                     </div>
                 </div>
             </div>
@@ -166,13 +166,13 @@
                 <div class="card-header" id="headingTwo">
                     <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        visión
+                        Visión
                     </button>
                     </h5>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExperiencia">
                     <div class="card-body">
-                        <strong>nuestra visión es muy buena </strong>             
+                        <strong>En el 2025 IDDE será líder en integración electrónica y sistemas por sus soluciones personalizadas e innovadoras que generan confianza y fraternidad. Aportar conocimientos en el campo social para aquellas personas que desean aprender sobre la electrónica y ser vistos no solo como una empresa que  ofrece sus servicios, también brinda educacion y formación.</strong>             
                     </div>
                 </div>
             </div>
