cambios contenido cards

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
                         </div>
                         <h3>Seguiridad</h3>
-                        <p> En nuestra área de Seguridad contamos con soluciones en: <br>
-                        - Sistemas de intrusión. <br>
-                        - Sistemas contra incendios. <br>
-                        - Sistemas cerrado de televisión.
+                        <p> 
+                        - Sistema de intrusión. <br>
+                        - Sistema detección de incendios. <br>
+                        - Sistema cerrado de televisión.
                         </p>
                     </figcaption>
                     <a href="#"></a>
@@ -111,9 +111,9 @@
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
                         </div>
                         <h3>Control</h3>
-                        <p> En nuestra área de Control contamos con soluciones en: <br>
-                        - Control de acceso.
-                        - Sistemas de control de Bioseguridad
+                        <p>
+                        - Control de acceso.<br>
+                        - Control de Bioseguridad.
                         </p>
                     </figcaption>
                     <a href="#"></a>       
@@ -127,9 +127,10 @@
                             <img src="./assets/img/logoImg.png" alt="iconIdde">
                         </div>
                         <h3>Innovación</h3>
-                        <p> En nuestra área de Innovación contamos con soluciones en: <br>
-                        - Integracion de sistemas Iot
-                        - Sistemas de control de energías renovables
+                        <p> 
+                        - Integracion de sistemas Iot. <br>
+                        - Integración para sistemas de control y detección(basados en la nube) <br>
+                        - Sistemas de energías renovables
                         </p>
                     </figcaption>
                     <a href="#"></a>
