ancho heredado ficaption cards

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
                         </div>
                         <h3>Control</h3>
                         <p>
-                        - Control de acceso.<br>
-                        - Control de Bioseguridad.
+                        - Control de acceso comercial.<br>
+                        - Control de Bioseguridad. <br>
+                        - Videoportero.
                         </p>
                     </figcaption>
                     <a href="#"></a>       
@@ -129,8 +130,8 @@
                         <h3>Innovación</h3>
                         <p> 
                         - Integracion de sistemas Iot. <br>
-                        - Integración para sistemas de control y detección(basados en la nube) <br>
-                        - Sistemas de energías renovables
+                        - Integración para sistemas de control y detección(basados en la nube). <br>
+                        - Sistemas de energías renovables.
                         </p>
                     </figcaption>
                     <a href="#"></a>
