--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section>
         <div class="container-fluid mx-1 mt-3 ">
             <div class="row">
-                <h2> Nuestras Áreas de acción</h2>
+                <h2> Líneas de Negocio:</h2>
             </div>
             <div class="row justify-content-md-center pl-1">    
                 <div class="col-md-4 mb-4">
